# AEGIS-OMEGA-X

./: .gitignore  Every time you want to run AEGIS.docx  MASTER-REFERENCE.md  MEGA_LAYER_1_simulation.py  README.md  conftest.py  launch_layer1.py  launch_layer2.py  launch_layer3.py  launch_layer4.py  logs.sh  run.sh  start.sh  status.sh  stop.sh  test.sh
DEPLOY/ansible/: provision.yml
DEPLOY/ci-cd/: aegis-cicd.yml
DEPLOY/docker/: ALL_DOCKERFILES.txt  docker-compose.yml  docker-compose.yml.broken  loki.yml  prometheus.yml
DEPLOY/kali-setup/: KALI_EXTENDED.sh  KALI_SETUP.sh
DEPLOY/scripts/: DR-RUNBOOK.md  git-init-and-push.sh
DEPLOY/tests/: test_all_layers.py
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/architecture/: 01-VISION.md
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/backend/: Cargo.toml  simulation_core.rs
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/backend/go-services/telemetry-ingestor/: go.mod  main.go
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/data-model/: models.py
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/database/: schema.sql
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/docs/: DEPLOYMENT.md  outputs-3-to-20.md
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/frontend/: pdt-dashboard.tsx
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/infrastructure/: k8s-manifests.yaml  main.tf
MEGA-LAYER-1-PLANETARY-DIGITAL-TWIN/services/: pdt_api.py
MEGA-LAYER-2-SECURITY-GENOME/architecture/: 01-VISION.md
MEGA-LAYER-2-SECURITY-GENOME/backend/: mutation_engine.py
MEGA-LAYERS-5-14/: complete_implementation.py
aegis-frontend/: next.config.js  package-lock.json  package.json
aegis-frontend/app/: layout.jsx  (+1 more)
(+29 files in other folders)
