[package]
name        = "sim-core"
version     = "1.0.0"
edition     = "2021"
authors     = ["AEGIS OMEGA X Team"]
description = "Planetary Digital Twin Simulation Core"
license     = "MIT"

[[bin]]
name = "sim_core"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1",    features = ["v4"] }
chrono      = { version = "0.4",  features = ["serde"] }
rand        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
thiserror   = "1"
dashmap     = "5"
rayon       = "1"
num_cpus    = "1"
prometheus  = { version = "0.13", features = ["process"] }
axum        = { version = "0.7",  features = ["tokio"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }

[dependencies.rdkafka]
version  = "0.36"
features = ["cmake-build", "sasl"]
optional = true

[features]
default  = []
kafka    = ["rdkafka"]
full     = ["kafka"]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tokio-test = "0.4"
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "cascade_bench"
harness = false
